# PostgressPlugin

./: CMakeLists.txt  README.md
contAggregatesExample/src/: data_population.c  test_refresh.c
median_calculation/: .gitignore  Makefile  README.md  median_calculation--0.0.1.sql  median_calculation.c  median_calculation.control
median_calculation/results/: median_calculation_test.out
median_calculation/sql/: median_calculation_test.sql
percentilesPostgres/: Makefile  compile_commands.json  ddsketch--0.0.1.sql  ddsketch.c  ddsketch.control
percentilesPostgres/.cache/clangd/index/: ddsketch.c.66DEAB4BE5D2F132.idx  ddsketch.h.AE4C944123FCE527.idx
postgressParallax/: Makefile  compile_commands.json  config.sql  postgress_parallax--0.0.1.sql  postgress_parallax.c  postgress_parallax.control
src/: continuous_aggregates.c  database_setup.c
timescaledb_example/: cpu_measurment.py  setup.sql
